# UniMERNet

./: .gitignore  LICENSE  README-ja.md  README-zh_CN.md  README.md  README_cn.md  demo.ipynb  demo.py  pyproject.toml  run_unimernet_app.py  streamlit_app.py  test.py  train.py
.ipynb_checkpoints/: demo-checkpoint.ipynb
MFD/: README.md  demo.py
cdm/: DockerFile  README-CN.md  README.md  change_prediction_format.py  evaluation.py  requirements.txt
cdm/modules/: latex2bbox_color.py  latex_processor.py  latex_render_percentage.py  visual_matcher.py
configs/: demo.yaml
configs/.ipynb_checkpoints/: demo-checkpoint.yaml
configs/train/: unimernet_base_encoder6666_decoder8_dim1024.yaml  unimernet_small_encoder6666_decoder8_dim768.yaml  unimernet_tiny_encoder6666_decoder8_dim512.yaml
configs/val/: unimernet_base.yaml  unimernet_small.yaml  unimernet_tiny.yaml
models/: README.md
scripts/: test.sh  test_base.sh  train.sh  train_base.sh
unimernet/: __init__.py
unimernet/common/: config.py  logger.py  optims.py  registry.py  utils.py
unimernet/configs/: default.yaml
unimernet/configs/datasets/formula/: formula_eval.yaml  formula_train.yaml  multi_scale_formula_train.yaml
unimernet/configs/models/: unimernet_base.yaml
unimernet/datasets/: data_utils.py
unimernet/datasets/builders/: __init__.py  base_dataset_builder.py  formula.py
unimernet/datasets/datasets/: base_dataset.py  dataloader_utils.py  formula.py  formula_multi_scale.py
unimernet/models/: __init__.py  base_model.py  clip_vit.py  eva_vit.py  vit.py
unimernet/models/blip2_models/: blip2.py  blip2_vicuna_instruct.py  modeling_llama.py  modeling_llama_.py
unimernet/models/unimernet/: configuration_unimernet_decoder.py  configuration_unimernet_encoder.py  encoder_decoder.py  modeling_unimernet_decoder.py  modeling_unimernet_encoder.py  unimernet.py  utils.py
unimernet/processors/: __init__.py  blip_processors.py  formula_processor.py
unimernet/processors/formula_processor_helper/: nougat.py  ops.py  weather.py
unimernet/runners/: __init__.py  runner_base.py  runner_iter.py
unimernet/tasks/: __init__.py  base_task.py  unimernet_train.py
